Fix upsell broken button layout issue #252

--- a/css/dashboard-notice.css
+++ b/css/dashboard-notice.css
@@ -33,7 +33,8 @@
   padding: 5px 12px;
   background: #0071AE;
   border-radius: 4px;
-  width: 105px;
+  display: inline-block;
+  width: auto;
   height: 30px;
   color: #FFFFFF;
   font-size: 13px;
